cursor tweaks: optimise events, fix states, input blurring, event bubbling with children
* stop firing so many events on `mouseover` (`mousemove`) + `mouseout` by replacing with `mouseenter`+`mouseleave` instead
* actually hide the mouse cursor in fullscreen, since we're using the gaze-based cursor
* abstract out classes for mock states (`.hover`, `.focus`, `.active`) - so all that logic is contained in their own methods
* prevent children from stealing `:hover` state from a parent (hovering over `<span>` inside an `<a>` will keep both elements `:hover`'d)
* let `<input>` fields be blurred when clicking away when they are focussed

--- a/src/web/css/navigation.css
+++ b/src/web/css/navigation.css
@@ -103,6 +103,10 @@ button {
   background-color: hsl(228, 15%, 19%);
 }
 
+#fs-container:-moz-full-screen * {
+  cursor: none;
+}
+
 @keyframes fs-container-lighten {
   from { background-color: hsl(228, 20%, 13%); }
   to { background-color: hsl(228, 15%, 19%); }
@@ -221,10 +225,6 @@ button {
   visibility: visible;
 }
 
-*:-moz-full-screen {
-  cursor: none;
-}
-
 
 /**
  * HUD
@@ -334,7 +334,6 @@ button {
   display: inline-block;
   font: 400 0.75em/1em sans-serif;
 }
-
 
 
 /**
